[IFC] Unexpected content wrapping when percent padding is present https://bugs.webkit.org/show_bug.cgi?id=256131 rdar://108666239

Reviewed by Antti Koivisto.

Apparently this is how the rest of the render tree code deals with percent padding (see updateBlockChildDirtyBitsBeforeLayout, layoutLineBoxes etc).

* LayoutTests/fast/inline/inline-block-with-precent-padding-expected.html: Added.
* LayoutTests/fast/inline/inline-block-with-precent-padding.html: Added.
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::layoutModernLines):

Canonical link: https://commits.webkit.org/263535@main